@@ -6,6 +6,7 @@ Features:
 Bugs:
 * #605 - Fix Mail::Address#name for nil addresses (peterkovacs)
 * #1003 - Fix decoding some b encoded headers on specific rubies that don't account for lack of base64 padding (kjg)
+* #1023 - Fix double-quoting in display names. (garethrees)
 
 == Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>
 
